Change wording of a question to improve clairity

--- a/Index.ipynb
+++ b/Index.ipynb
@@ -55,21 +55,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Assign the data and feature_names to variables"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Create a dataframe with the array ```features``` and the correct column names"
+    "### Create a dataframe with values from `data` and the correct column names from `feature_names`"
    ]
   },
   {
@@ -111,7 +97,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Show summary statistics of all rows"
+    "### Show summary statistics of all columns"
    ]
   },
   {
@@ -233,16 +219,8 @@
    "outputs": [],
    "source": [
     "\n",
-    "\n",
     "#28.44"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
