prepping for illumidesk transfer

--- a/Index.ipynb
+++ b/Index.ipynb
@@ -31,7 +31,12 @@
    "outputs": [],
    "source": [
     "#__SOLUTION__\n",
+    "# Run this import cell without changes\n",
+    "\n",
+    "#data manipulation\n",
     "import pandas as pd\n",
+    "\n",
+    "#dataset\n",
     "from sklearn.datasets import load_boston"
    ]
   },
@@ -1473,13 +1478,6 @@
     "\n",
     "'''The average median value of houses located along the Charles River is $28,440'''"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -1498,7 +1496,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
